--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,3 +1,35 @@
 name: Build Release APK
 on:
   workflow_dispatch:
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      
+      - name: Set up JDK 21
+        uses: actions/setup-java@v5
+        with:
+          distribution: "temurin"
+          java-version: "21"
+          
+      - name: Change wrapper permissions
+        run: chmod +x ./gradlew
+        
+      - name: Decode keystore
+        run: echo ${{ secrets.KEYSTORE_BASE64 }} | base64 -di > ${{ github.workspace }}/keystore.jks
+        
+      - name: Build release
+        run: >
+          ./gradlew assembleRelease
+          -Pandroid.injected.signing.store.file=${{ github.workspace }}/keystore.jks
+          -Pandroid.injected.signing.store.password=${{ secrets.KEYSTORE_FILE_PASSWORD }}
+          -Pandroid.injected.signing.key.alias=${{ secrets.KEYSTORE_ALIAS }}
+          -Pandroid.injected.signing.key.password=${{ secrets.KEYSTORE_ALIAS_PASSWORD }}
+
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v5
+        with:
+          name: Build Artifacts
+          path: app/build/outputs/
