--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -20,6 +20,7 @@ litert = "2.1.0"
 navigationCompose = "2.9.6"
 protobufJava = "4.33.4"
 protobufKotlin = "4.33.4"
+protoc = "4.33.4"
 appcompat = "1.7.1"
 material = "1.13.0"
 media3CommonKtx = "1.9.0"
