--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,13 @@
 .externalNativeBuild
 .cxx
 local.properties
+
+## Missing from the generated gitignore
+.idea/androidTestResultsUserPreferences.xml
+.idea/appInsightsSettings.xml
+.idea/deploymentTargetSelector.xml
+.idea/deploymentTargetDropDown.xml
+.idea/emulatorDisplays.xml
+.idea/graphql-settings.xml
+.idea/runConfigurations.xml
+.idea/studiobot.xml
