--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,6 +4,7 @@ datastore = "1.2.0"
 hiltAndroid = "2.58"
 hiltLifecycleViewmodel = "1.3.0"
 kotlin = "2.3.0"
+kotlinxCoroutinesTest = "1.10.2"
 ksp = "2.3.4"
 coreKtx = "1.17.0"
 junit = "4.13.2"
@@ -53,6 +54,7 @@ androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-man
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 androidx-material = { group = "androidx.compose.material", name = "material" }
 kotlinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "kotlinxCoroutinesCore" }
+kotlinx-coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "kotlinxCoroutinesTest" }
 kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinxSerializationJson" }
 litert = { module = "com.google.ai.edge.litert:litert", version.ref = "litert" }
 protobuf-java = { module = "com.google.protobuf:protobuf-javalite", version.ref = "protobufJava" }
